corrected whitespace wrapping for buttons corrected link prefix for job locations buttons

--- a/app/assets/stylesheets/grayscale.css.scss
+++ b/app/assets/stylesheets/grayscale.css.scss
@@ -234,7 +234,9 @@ a:focus {
     -webkit-animation-timing-function: linear;
     -moz-animation-timing-function: linear;
 }
-
+.job-posting .btn{
+  white-space: normal;
+}
 @-webkit-keyframes pulse {
     0% {
         -webkit-transform: scale(1);
